tests/test_if/test9.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if 6 >= 9 || true || (2 % 6 != 3) then
    skip 
  else 
    skip
  fi
end
